The bug with particles-js that I just reported on seems to be related to page and OS zoom as it doesn't seem to show up on Firefox for Linux when the zoom is set to 100%. Tonight was mostly fine tuning.

--- a/css/main.css
+++ b/css/main.css
@@ -1607,7 +1607,8 @@ input[type=submit]{
 input[type=submit]:hover{
   transform: translateY(-5px);
   -webkit-transform: translateY(-5px);
-  box-shadow: 0 18px 25px -5px #B99BEC;
+  /* box-shadow: 0 18px 25px -5px #B99BEC; */
+  box-shadow: 0 18px 25px -5px #df91fb;
 }
 
 
